
All (GUI):

- Added wxWindow::GetNextSibling() and GetPrevSibling().
- Support wxGRID_AUTOSIZE in wxGrid::SetRow/ColLabelSize() (Evgeniy Tarassov).
- Ensure that wxGrid::AutoSizeColumn/Row() never sets column/row size
  smaller than the minimal size.
- Added <scrollrate> parameter to wxScrolledWindow XRC handler.
- wxRichTextCtrl performance has been improved considerably.
- wxNotebook RTTI corrected, so now wxDynamicCast(notebook, wxBookCtrlBase)
  works.
- When focus is set to wxScrolledWindow child, scroll it into view.
- Improve wximage::ResampleBox() (Mihai Ciocarlie).
- Implemented ScrollList() in generic wxListCtrl (Tim Kosse).
- SaveAs in docview takes into account path now.
- Fixed wxXmlResource::GetText() to convert data to current locale's
  charset in ANSI build.
- wxGrid now indicates focus by using different colour for selection
  and hiding cell cursor when it doesn't have focus.
- Added alpha support to wxImage::Paste() (Steven Van Ingelgem)

All (Unix):

- Fixed shared libraries to not depend on GStreamer when built with
  --enable-media; only wxMedia library depends on it now.
- wxLaunchDefaultBrowser() now uses xdg-open if available.
- Don't close UDP socket if an empty datagram is received (Mikkel S)

wxMSW:

- Fix rare bug with messages delivered to wrong wxSocket (Tim Kosse).
- Fix setting icons when they have non-default (16*16 and 32*32) sizes.
- Fixed wxLocale::GetInfo to use the C locale.
- Don't enable disabled windows when showing them (Harry McKame).
- Fix assert when using owner-drawn menu items with the newest (Vista) SDK.
- Fixed wxTextCtrl to not process clipboard events twice if there's
  a custom wxEVT_COMMAND_TEXT_* event handler.
- Fix wxComboBox to not lose the current value if it was programmatically set
  to a value not in a list of choices on popup close (Kolya Kosenko)

wxGTK:

- Return false from wxEventLoop::Dispatch() if gtk_main_quit() was called and
  so the loop should exit (Rodolfo Schulz de Lima).